Fixed Logo Alignment
Entered logo in the theme

--- a/StudentCenter2.0/public_html/MainTheme.css
+++ b/StudentCenter2.0/public_html/MainTheme.css
@@ -16,6 +16,8 @@ body {
 }
 
 #ImageHeader{
+    margin-left: auto;
+    margin-right: auto;
     background-image: url("logo2.jpg");
     background-size: contain;
     height:100px;
